--- a/01_자료형&변수.ipynb
+++ b/01_자료형&변수.ipynb
@@ -1270,6 +1270,66 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16b27cac",
+   "metadata": {},
+   "source": [
+    "### 슬라이싱: [::2]\n",
+    "a[ start : end : step ]\n",
+    "\n",
+    "step이 양수일 때: 오른쪽으로 step만큼 이동하면서 가져옵니다.\n",
+    "step이 음수일 때: 왼쪽으로 step만큼 이동하면서 가져옵니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "067e89e6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T11:07:35.610319Z",
+     "start_time": "2023-12-03T11:07:35.604605Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "홀홀홀\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = '홀짝홀짝홀짝'\n",
+    "print(string[::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4491592c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T11:57:15.104836Z",
+     "start_time": "2023-12-03T11:57:15.098598Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tuple(range(99)[2: 100: 2])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "406a2ae7",
    "metadata": {},
    "source": [
@@ -1965,7 +2025,7 @@
    "metadata": {},
    "source": [
     "## f 문자열 포매팅\n",
-    "### 문자: f'문자열'"
+    "### 문자: f'문자열' = f-string"
    ]
   },
   {
@@ -2465,6 +2525,103 @@
    "source": [
     "a = 'HI'\n",
     "a.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a7ffe2",
+   "metadata": {},
+   "source": [
+    "### 첫글자 대문자로 바꾸기: a.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "60d70e9a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T09:42:01.460904Z",
+     "start_time": "2023-12-03T09:42:01.360711Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"hello\"\n",
+    "print(a.capitalize())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af1962bf",
+   "metadata": {},
+   "source": [
+    "### 지정 문자열로 끝나는지 확인하기: a.endswith('지정 문자열')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "94e008d6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T10:11:01.534706Z",
+     "start_time": "2023-12-03T10:11:01.523632Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name = \"보고서.xlsx\"\n",
+    "a = file_name.endswith('xlsx')\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeafca17",
+   "metadata": {},
+   "source": [
+    "### 지정 문자열로 시작하는지 확인하기: a.startswith('지정 문자열')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2d8e463b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T10:13:49.049037Z",
+     "start_time": "2023-12-03T10:13:49.039658Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name = \"2020_보고서.xlsx\"\n",
+    "print(file_name.startswith('2020'))"
    ]
   },
   {
@@ -3371,7 +3528,7 @@
    "id": "8cb2ed5a",
    "metadata": {},
    "source": [
-    "### 리스트 길이 구하기: len()"
+    "### 리스트 길이 구하기: len(리)"
    ]
   },
   {
@@ -3398,6 +3555,25 @@
    ],
    "source": [
     "len(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ce5e1d9",
+   "metadata": {},
+   "source": [
+    "### 리스트 합 구하기: sum(리)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a065bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [1, 2, 3, 4, 5]\n",
+    "print(sum(nums))"
    ]
   },
   {
@@ -3484,6 +3660,34 @@
     "a = [1, 2, 3, 4, 5]\n",
     "del a[2:]\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1c3d8841",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T10:30:41.375882Z",
+     "start_time": "2023-12-03T10:30:41.371126Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['닥터 스트레인지', '슈퍼맨']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 여러개 삭제하기\n",
+    "\n",
+    "movie_rank = ['닥터 스트레인지', '슈퍼맨', '스플릿', '배트맨']\n",
+    "del movie_rank[2]\n",
+    "del movie_rank[2]\n",
+    "print(movie_rank)"
    ]
   },
   {
@@ -4017,10 +4221,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84cbfe3c",
+   "metadata": {},
+   "source": [
+    "### 최댓값 구하기: max(리)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c5f9f188",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T10:35:32.590624Z",
+     "start_time": "2023-12-03T10:35:32.585638Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max:  7\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5, 6, 7]\n",
+    "print('max: ', max(nums))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d386419",
+   "metadata": {},
+   "source": [
+    "### 최솟값 구하기: max(리)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ec4d6557",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T10:35:43.154287Z",
+     "start_time": "2023-12-03T10:35:43.149279Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4, 5, 6, 7]\n",
+    "print('min: ', min(nums))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7f446c12",
    "metadata": {},
    "source": [
-    "# 튜플: (), 요소 변경 불가\n",
+    "# 튜플: (), 요소 변경 불가 ->list로 변경 후 가능\n",
     "- vs 리스트: [], 요소 변경 가능\n",
     "## 튜플 기본형"
    ]
@@ -4279,7 +4547,7 @@
    "id": "9a6a9099",
    "metadata": {},
    "source": [
-    "### 딕셔너리 요소 삭제하기: del 딕셔너리[key]"
+    "### 딕셔너리 요소 삭제하기: del 딕[key]"
    ]
   },
   {
@@ -4308,6 +4576,80 @@
    "source": [
     "del a[1]\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "494af6fd",
+   "metadata": {},
+   "source": [
+    "### 딕셔너리 value 수정하기: 딕['key'] = '수정 value'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e8506229",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T12:30:40.172079Z",
+     "start_time": "2023-12-03T12:30:40.164323Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'메로나': 1300, '폴로포': 1200, '빵빠레': 1800, '죠스바': 1200, '월드콘': 1500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ice = {'메로나': 1000,\n",
+    "       '폴로포': 1200,\n",
+    "       '빵빠레': 1800,\n",
+    "       '죠스바': 1200,\n",
+    "       '월드콘': 1500}\n",
+    "\n",
+    "ice[\"메로나\"] = 1300\n",
+    "print(ice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "673dd9aa",
+   "metadata": {},
+   "source": [
+    "### 여러개 값 넣기: 딕.update(수정할 딕)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f1d64cd7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T12:58:22.598770Z",
+     "start_time": "2023-12-03T12:58:22.589112Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'탱크보이': 1200, '폴라포': 1200, '빵빠레': 1800, '월드콘': 1500, '메로나': 1000, '팥빙수': 2700, '아맛나': 1000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "icecream = {'탱크보이': 1200, '폴라포': 1200, '빵빠레': 1800, '월드콘': 1500, '메로나': 1000}\n",
+    "new_product = {'팥빙수':2700, '아맛나':1000}\n",
+    "\n",
+    "icecream.update(new_product)\n",
+    "\n",
+    "print(icecream)"
    ]
   },
   {
@@ -4386,6 +4728,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6949e54c",
+   "metadata": {},
+   "source": [
+    "### 리스트의 value 얻기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4142725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory = {\"메로나\": [300, 20],\n",
+    "              \"비비빅\": [400, 3],\n",
+    "              \"죠스바\": [250, 100]}\n",
+    "\n",
+    "print(inventory['메로나'][0], '원')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3b4b62d",
+   "metadata": {},
+   "source": [
+    "### 두개의 튜플을 하나의 딕셔너리로 만들기: dict(zip(, ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27fc1ec7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys = (\"apple\", \"pear\", \"peach\")\n",
+    "vals = (300, 250, 400)\n",
+    "print(dict(zip(keys, vals)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6c8ac233",
    "metadata": {},
    "source": [
@@ -4430,7 +4814,8 @@
     "ExecuteTime": {
      "end_time": "2023-11-29T07:55:43.004022Z",
      "start_time": "2023-11-29T07:55:42.995240Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -4780,6 +5165,68 @@
    ],
    "source": [
     "'email' in a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6cbb71c",
+   "metadata": {},
+   "source": [
+    "### 별 표현식: *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2e0a54cc",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T12:19:06.425358Z",
+     "start_time": "2023-12-03T12:19:06.417727Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "[2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, *c = (0, 1, 2, 3, 4, 5)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d10e03a9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-03T12:21:27.006071Z",
+     "start_time": "2023-12-03T12:21:26.999718Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.8, 8.9, 8.7, 9.2, 9.3, 9.7, 9.9, 9.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = [8.8, 8.9, 8.7, 9.2, 9.3, 9.7, 9.9, 9.5, 7.8, 9.4]\n",
+    "*valid_score, a, b = scores\n",
+    "print(valid_score)"
    ]
   },
   {
