--- a/02_제어문.ipynb
+++ b/02_제어문.ipynb
@@ -1171,6 +1171,7 @@
     "### 기본 형태\n",
     "- range(10): 0~10 미만\n",
     "- range(1, 11): 1~11 미만  \n",
+    "- range(1, 10, 2): 1부터 2개씩 띄어서 9까지\n",
     "#### 예시\n",
     "- 1부터 10까지 더하기"
    ]
