--- a/05_데이터분석/Service_Analysis_Project.ipynb
+++ b/05_데이터분석/Service_Analysis_Project.ipynb
@@ -8,7 +8,8 @@
     "ExecuteTime": {
      "end_time": "2023-12-28T00:28:36.632520Z",
      "start_time": "2023-12-28T00:28:36.627986Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
