--- a/05_데이터분석/미니 프로젝트 정리.ipynb
+++ b/05_데이터분석/미니 프로젝트 정리.ipynb
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "96b81899",
+   "id": "fae1240d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-02T02:28:40.310723Z",
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1884142c",
+   "id": "c30e0971",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-02T01:04:47.823883Z",
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "1072409f",
+   "id": "4019c663",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-02T02:46:28.700260Z",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "5b9ed94d",
+   "id": "05d07a31",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-02T02:46:38.235185Z",
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8f96d4a1",
+   "id": "0d0438a6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-02T02:18:50.120185Z",
@@ -1065,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "51a2dd64",
+   "id": "7533a221",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-02T02:21:25.801872Z",
@@ -1095,13 +1095,14 @@
     "    비율 = (Premium_선호단계_구독종류[i]/Premium_총인원*100)\n",
     "    Premium_선호단계_구독종류_비율[i] = 비율\n",
     "\n",
-    "Premium_선호단계_구독종류_비율"
+    "Premium_선호단계_구독종류_비율\n",
+    "pd.df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7126efff",
+   "id": "6484591e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-02T02:22:42.550390Z",
@@ -1162,7 +1163,8 @@
     "ExecuteTime": {
      "end_time": "2023-12-31T12:57:22.641534Z",
      "start_time": "2023-12-31T12:57:22.603246Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1393,39 +1395,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 85,
    "id": "c8ade06d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-31T13:39:42.845064Z",
-     "start_time": "2023-12-31T13:39:42.750498Z"
+     "end_time": "2024-01-02T05:36:52.693441Z",
+     "start_time": "2024-01-02T05:36:52.486105Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12.3\n",
-      "3.0\n",
-      "1.4\n",
-      "0.8\n",
-      "0.5\n",
-      "0.3\n",
-      "0.3\n",
-      "0.2\n",
-      "0.2\n",
-      "0.1\n"
+     "ename": "KeyError",
+     "evalue": "'평균코스수'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3653\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3652\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3653\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3654\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\_libs\\index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: '평균코스수'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[85], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m11\u001b[39m):\n\u001b[0;32m      4\u001b[0m     구독i개월_인원 \u001b[38;5;241m=\u001b[39m user_data[user_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubscription_duration\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m==\u001b[39mi]\u001b[38;5;241m.\u001b[39mcount()[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muser_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 5\u001b[0m     구독i개월_총코스수 \u001b[38;5;241m=\u001b[39m user_data[user_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msubscription_duration\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m==\u001b[39mi]\u001b[38;5;241m.\u001b[39msum()[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m평균코스수\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      6\u001b[0m     구독i개월_평균코스수 \u001b[38;5;241m=\u001b[39m (구독i개월_총코스수\u001b[38;5;241m/\u001b[39mi\u001b[38;5;241m/\u001b[39m구독i개월_인원)\u001b[38;5;241m.\u001b[39mround(\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      7\u001b[0m     개월별_코스수[i]\u001b[38;5;241m=\u001b[39m구독i개월_평균코스수\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\series.py:1007\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1004\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[key]\n\u001b[0;32m   1006\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[1;32m-> 1007\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_value(key)\n\u001b[0;32m   1009\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_hashable(key):\n\u001b[0;32m   1010\u001b[0m     \u001b[38;5;66;03m# Otherwise index.get_value will raise InvalidIndexError\u001b[39;00m\n\u001b[0;32m   1011\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1012\u001b[0m         \u001b[38;5;66;03m# For labels that don't resolve as scalars like tuples and frozensets\u001b[39;00m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\series.py:1116\u001b[0m, in \u001b[0;36mSeries._get_value\u001b[1;34m(self, label, takeable)\u001b[0m\n\u001b[0;32m   1113\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[label]\n\u001b[0;32m   1115\u001b[0m \u001b[38;5;66;03m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[1;32m-> 1116\u001b[0m loc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39mget_loc(label)\n\u001b[0;32m   1118\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(loc):\n\u001b[0;32m   1119\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[loc]\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3655\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3653\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3654\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m-> 3655\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3656\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3657\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3658\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3659\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3660\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: '평균코스수'"
      ]
     }
    ],
    "source": [
     "# 10개월\n",
+    "개월별_코스수={}\n",
     "for i in range(1, 11):\n",
     "    구독i개월_인원 = user_data[user_data['subscription_duration']==i].count()['user_id']\n",
     "    구독i개월_총코스수 = user_data[user_data['subscription_duration']==i].sum()['평균코스수']\n",
     "    구독i개월_평균코스수 = (구독i개월_총코스수/i/구독i개월_인원).round(1)\n",
-    "    print(구독i개월_평균코스수)"
+    "    개월별_코스수[i]=구독i개월_평균코스수\n",
+    "\n",
+    "개월별_코스수"
    ]
   },
   {
